# CrossRadar

./: .gitignore  FLUTTER_APP_IMPLEMENTATION_PLAN.md  README.md  station 里程.md  新 station 里程.md  無法 osm 的項目紀錄.md
WebApp/: README.md  pyproject.toml  temp.json  車站基本資料集.json
WebApp/backend/app/: config.py  dependencies.py  main.py  utils.py
WebApp/backend/app/api/: crossings.py  predictions.py  system.py
WebApp/backend/app/clients/: tdx_tra.py
WebApp/backend/app/models/: prediction.py
WebApp/backend/app/services/: crossing_catalog.py  manual_mapping.py  (+7 more)
WebApp/data/crossings/: crossings_curated.geojson  crossings_curated_tainan.geojson  crossings_full.geojson  crossings_official.json  crossings_official_tainan.json
WebApp/data/observations/: crossing_passages_manual.json
WebApp/data/stations/: station_engineering_chainage.json  stations_official(UK).json  stations_official.json  stations_official_uk_change_report.json
WebApp/frontend/static/: app.js  index.html  ratio-workspace.html  ratio-workspace.js  styles.css
WebApp/scripts/: analyze_unmatched_crossings.py  audit_mobile_bundle_accuracy.py  audit_mobile_calibration_readiness.py  build_prediction_calibration.py  export_mobile_bundle.py  generate_station_engineering_chainage.py  replay_prediction_observations.py
WebApp/tests/: test_crossing_catalog_matching.py  test_crossing_parser.py  test_export_mobile_bundle.py  test_mobile_bundle_audit.py  test_prediction_calibration_readiness.py  test_predictor_smoke.py  test_rail_path.py  test_route_reference.py  test_station_graph.py  test_tdx_tra_client.py
(+96 files in other folders)
